@@ -43,6 +43,7 @@ export(setAccessToken)
 export(setPermissions)
 export(setQuota)
 export(startUpload)
+export(translateTextQuery)
 export(unlockProject)
 export(uploadDirectory)
 export(uploadFiles)
